--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,9 @@ color: var(--button-span-color);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
-    transition: transform color 250ms linear, cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
+    
 }
 
 .header-link.current::after {
@@ -346,7 +347,7 @@ margin-bottom: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: color 250ms linear;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover {
@@ -394,9 +395,8 @@ margin-bottom: 8px;
     align-items: center;
     justify-content: center;
     fill: #AFB1B8;
-    transition: color 250ms linear;
-
-    }
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
     .test-link:hover {
     border-color: #404BBF;
     fill: #404BBF;
@@ -450,8 +450,9 @@ border-radius: 4px;
 background: #F4F4FD;
 border: 1px solid #E7E9FC;
 padding: 12px 24px 12px 24px;
-transition: color 250ms linear;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .work-button-btn:hover {
     background-color: rgba(64, 75, 191, 1);
@@ -504,6 +505,8 @@ box-shadow: 0 3px 3px #E5E5E5;
 .work-top-test {
     position: absolute;
     top: 0;
+    padding-left: 32px;
+    padding-top: 32px;
 font-style: normal;
 font-size: 16px;
 line-height: 1.5;
@@ -617,7 +620,7 @@ height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: color 250ms linear;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-div-link:hover {
     background-color: rgba(49, 208, 170, 1);
@@ -666,6 +669,10 @@ height: 40px;
     background-color: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+}
+.modal-close:hover,
+.modal-close:focus {
+    background-color: rgba(64, 75, 191, 1);
 }
 .modal-icon {
     color: rgba(0, 0, 0, 1);
